--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div>
-            <h1>Wellcome to the <strong>Clock</strong> project!</h1>  
+            <h1>Welcome to the <strong>Clock</strong> project!</h1>  
             <div>
                 <a href="#" class="btn" id="btnID">Digital Clock</a>
                 <a href="#" class="btn" id="nav">Analog Clock</a>
